# CNEFE-data

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  t.py
.github/workflows/: ci.yml
docs/: actual_behavior.md  domain_design.md  pre_refactoring.md
scripts/: download.py  extract.py  metadata.py  process_addresses.py  process_metadata.py
src/addresses/domain/: aggregates.py  value_objects.py
tests/: test_download_file.py  test_extract_file.py  test_process_addresses.py  test_process_metadata.py
tests/domain/: test_aggregates.py  test_value_objects.py
