[project]
name = "cnefe-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "tqdm>=4.67.1",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "notebook>=7.4.5",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=scripts --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["scripts"]
omit = [
  "scripts/__init__.py",
  "scripts/*/__main__.py"
]
